{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "CharacterControls",
            "id": "0be18a6e-ef79-4f1b-84b0-7d4b1f46c5e9",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "fe2e4eff-5fd9-48e9-8452-5fe853894c0a",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": ""
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "59741b19-d903-45bb-8d54-4cb293fd31c9",
                    "expectedControlType": "Button",
                    "processors": "NormalizeVector2",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "8c382ed7-f228-4b78-b3d2-82d805d9725c",
                    "expectedControlType": "Button",
                    "processors": "NormalizeVector2",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "0c3a63ae-a719-4b44-b6d3-d1ee6f44f79e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "495c6454-9d5c-4ecf-a2d1-2103604fa6ce",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a00b4cc5-6634-47f2-8b51-192d0b0bd874",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3dcfa463-429a-4c03-b74c-b0daf78c0866",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "4830bf69-2ff3-4831-bad7-e909d0f3c741",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "9668836a-dd12-41dc-9ea7-5d2389b4ba34",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c37497d-3498-4533-89ca-3e5b5c7362ec",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}